tests/ui/parser/literals/big_literal.sol
uint constant bigLiteral = 115792089237316195423570985008687907853269984665640564039457584007913129639935;
uint constant tooBigLiteral = 115792089237316195423570985008687907853269984665640564039457584007913129639936;
//~^ ERROR: integer part too large
